--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
         </div>
 
-        <div class="desktop-ad"><img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fmymodernmet.com%2Fhistory-of-tarot-cards%2F&psig=AOvVaw3rHEdYweMNq1f9WtMuWCIB&ust=1638857675352000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCNi329_CzvQCFQAAAAAdAAAAABAD" alt="tarot"></div>
+        <div class="desktop-ad"><img src="homework2/history-of-tarot-cards-1.jpg" alt="tarot"></div>
 
         <main>
             <article class="feature"><p>More recently, major fashion houses such as Versace and Dolce & Gabbana have used Tarot designs in their collections.  </p></article>
